Attempt to fix the videos bleeding into the orange area

--- a/app/assets/stylesheets/creative/creative.scss
+++ b/app/assets/stylesheets/creative/creative.scss
@@ -501,7 +501,7 @@ input.sentiment[type="radio"] {
 }
 
 .quiz-video {
-    @media (max-width: 768px) {
+    @media (max-width: 992px) {
         width: 300px;
     }
 }
